--- a/index.html
+++ b/index.html
@@ -2,85 +2,29 @@
 <html lang="en">
 
 <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <title>It's me Sarah</title>
-    <style>
-        @font-face {
-            font-family: raquen;
-            src: url('./fonts/Raquen.otf');
-        }
-
-        @font-face {
-            font-family: jetBrainsMono-regular;
-            src: url('./fonts/JetBrainsMono-Regular.ttf');
-        }
-
-        body {
-            margin: 15% 5% 1% 15%;
-        }
-
-        h1 {
-            font-family: raquen;
-            font-size: 6rem;
-            margin: 1rem 0;
-            width: fit-content;
-        }
-
-        p {
-            font-family: jetBrainsMono-regular;
-            font-size: 1rem;
-        }
-
-        img.logo {
-            width: 50px;
-            height: 50px;
-            margin: 1rem 1rem 0 0;
-        }
-
-        img.map {
-            width: auto;
-            padding: 1rem;
-            margin: 0 15% 0 0;
-        }
-
-        .swissflag {
-            font-size: 1.5rem;
-        }
-
-        .fancy-background {
-            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-            background-size: 400% 400%;
-            animation: gradient 15s ease infinite;
-        }
-
-        @keyframes gradient {
-            0% {
-                background-position: 0% 50%;
-            }
-
-            50% {
-                background-position: 100% 50%;
-            }
-
-            100% {
-                background-position: 0% 50%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <h1>
         Hi, my name is Sarah
     </h1>
-    <a href="https://www.adobe.com"><img src="./imgs/adobe-logo.png" class="logo" /></a>
-    <a href="https://github.com/sasoara" class="logo"><img src="./imgs/octo-cat-github.png" class="logo" /></a>
-    <a href="https://www.linkedin.com/in/sarah-bettinger-730242149"><img src="./imgs/linkedin-logo.png"
-            class="logo" /></a>
+    <a href="https://www.adobe.com">
+        <img src="./imgs/adobe.logo.svg" class="logo" alt="Adobe website">
+    </a>
+    <a href="https://github.com/sasoara">
+        <img src="./imgs/octocat.github.logo.svg" class="logo" alt="GitHub user sasoara">
+    </a>
+    <a href="https://www.linkedin.com/in/sarah-bettinger-730242149">
+        <img src="./imgs/linkedin.logo.svg" class="logo" alt="LinkedIn profile Sarah Bettinger">
+    </a>
     <p>I am an apprentice in the field of application development at Adobe in Basel <span class="swissflag">🇨🇭</span>.
     </p>
-    <a href="https://goo.gl/maps/tSsjewoNepLTMwzM9"><img class="map fancy-background" src="./imgs/map-grey.svg"
-            alt="map"></a>
+    <a href="https://goo.gl/maps/tSsjewoNepLTMwzM9">
+        <img class="map fancy-background" src="./imgs/map-grey.svg" alt="Basel map">
+    </a>
 
 </body>
 
