--- a/index.html
+++ b/index.html
@@ -7,25 +7,21 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="fancy-background">
     <h1>
         Hi, my name is Sarah
     </h1>
+    <p>I am an apprentice in the field of application development at Adobe in Basel <span class="swissflag">🇨🇭</span>.
+    </p>
     <a href="https://www.adobe.com" target="_blank">
-        <img src="./imgs/adobe.logo.svg" class="logo" alt="Adobe website">
+        <img src="./imgs/adobe.logo.black.svg" class="logo" alt="Adobe website">
     </a>
     <a href="https://github.com/sasoara" target="_blank">
         <img src="./imgs/octocat.github.logo.svg" class="logo" alt="GitHub user sasoara">
     </a>
     <a href="https://www.linkedin.com/in/sarah-bettinger-730242149" target="_blank">
-        <img src="./imgs/linkedin.logo.svg" class="logo" alt="LinkedIn profile Sarah Bettinger">
+        <img src="./imgs/linkedin.logo.black.svg" class="logo" alt="LinkedIn profile Sarah Bettinger">
     </a>
-    <p>I am an apprentice in the field of application development at Adobe in Basel <span class="swissflag">🇨🇭</span>.
-    </p>
-    <a href="https://goo.gl/maps/tSsjewoNepLTMwzM9" target="_blank">
-        <img class="map fancy-background" src="./imgs/map-grey.svg" alt="Basel map">
-    </a>
-
 </body>
 
 </html>
