adds swissflag svg, adds Basel:hover-animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1>
         Hi, my name is Sarah
     </h1>
-    <p>I am an apprentice in the field of application development at Adobe in Basel <span class="swissflag">🇨🇭</span>.
+    <p>I am an apprentice in the field of application development at Adobe in <a
+            href="https://goo.gl/maps/tSsjewoNepLTMwzM9" target="_blank" class="basel">Basel</a>
+        <span><img src="./imgs/swissflag.svg" class="swissflag" alt="Swiss flag"></span> .
     </p>
     <a href="https://www.adobe.com" target="_blank">
         <img src="./imgs/adobe.logo.black.svg" class="logo" alt="Adobe website">
