--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=500, initial-scale=1">
     <title>It's me Sarah</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
