--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
     <h1>
         Hi, my name is Sarah
     </h1>
-    <p>I am an apprentice in the field of application development at Adobe in <a
+    <p>I am a junior software developer engineer from <a
             href="https://goo.gl/maps/tSsjewoNepLTMwzM9" target="_blank" class="basel">Basel</a>
-        <span><img src="./imgs/swissflag.svg" class="swissflag" alt="Swiss flag"></span> .
+        <span><img src="./imgs/swissflag.svg" class="swissflag" alt="Swiss flag"></span>
     </p>
-    <a href="https://www.adobe.com" target="_blank">
-        <img src="./imgs/adobe.logo.black.svg" class="logo" alt="Adobe website">
-    </a>
     <a href="https://github.com/sasoara" target="_blank">
         <img src="./imgs/octocat.github.logo.svg" class="logo" alt="GitHub user sasoara">
     </a>
