adds link to my timetable project

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <a href="https://www.linkedin.com/in/sarah-bettinger-730242149" target="_blank">
         <img src="./imgs/linkedin.logo.black.svg" class="logo" alt="LinkedIn profile Sarah Bettinger">
     </a>
+    <a href="http://sasoara.com/gibm-timetable-js/" target="_blank">
+        <img src="./imgs/cloud.myproject.svg" class="logo" alt="Timetable project">
+    </a>
 </body>
 
 </html>
