changes the Basel location to Switzerland

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Hi, my name is Sarah
     </h1>
     <p>I am a junior software developer engineer from <a
-            href="https://goo.gl/maps/tSsjewoNepLTMwzM9" target="_blank" class="basel">Basel</a>
+            href="https://goo.gl/maps/H3adkEnzDqWUAMG5A" target="_blank" class="ch">Switzerland</a>
         <span><img src="./imgs/swissflag.svg" class="swissflag" alt="Swiss flag"></span>
     </p>
     <a href="https://github.com/sasoara" target="_blank">
