--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <a href="http://sasoara.com/gibm-timetable-js/" target="_blank">
         <img src="./imgs/cloud.myproject.svg" class="logo" alt="Timetable project">
     </a>
+    <a href="https://platform.entwicklerheld.de/publicprofile/aa9aa534eddcd323a952ae9632d8b6b7/" target="_blank">
+        <img src="./imgs/eh.logo.black.svg" class="logo" alt="Entwicklerheld profile">
+    </a>
 </body>
 
 </html>
